# micro_ros_acados_example

./: .gitignore  CMakeLists.txt  Makefile  README.md  acados_sim_solver_pendulum_ode.c  acados_sim_solver_pendulum_ode.h  acados_solver.pxd  acados_solver_pendulum_ode.c  acados_solver_pendulum_ode.h  acados_solver_sfunction_pendulum_ode.c  main_pendulum_ode.c  main_sim_pendulum_ode.c  make_sfun_pendulum_ode.m  ros_service_node.c  ros_subscription_node.c
pendulum_ode_cost/: pendulum_ode_cost_ext_cost_0_fun.c  pendulum_ode_cost_ext_cost_0_fun_jac.c  pendulum_ode_cost_ext_cost_0_fun_jac_hess.c  pendulum_ode_cost_ext_cost_e_fun.c  pendulum_ode_cost_ext_cost_e_fun_jac.c  pendulum_ode_cost_ext_cost_e_fun_jac_hess.c  pendulum_ode_cost_ext_cost_fun.c  pendulum_ode_cost_ext_cost_fun_jac.c  pendulum_ode_cost_ext_cost_fun_jac_hess.c  pendulum_ode_external_cost.h  pendulum_ode_external_cost_0.h  pendulum_ode_external_cost_e.h
pendulum_ode_model/: pendulum_ode_impl_dae_fun.c  pendulum_ode_impl_dae_fun_jac_x_xdot_u.c  pendulum_ode_impl_dae_fun_jac_x_xdot_u_z.c  pendulum_ode_impl_dae_fun_jac_x_xdot_z.c  pendulum_ode_impl_dae_jac_x_xdot_u_z.c  pendulum_ode_model.h
